# base_ddd

./: README.md  docker-compose.yml  pyproject.toml
src/: main.py
src/app/: application.py  container.py  domain.py  infrastructure.py
src/files/: .~lock.data.csv#  data.csv
