[tool.poetry]
name = "test-libs"
version = "0.1.0"
description = ""
authors = ["emurze <rozanov7475@yandex.by>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mypy = "^1.6.1"
weasyprint = "^60.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
